// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderHeader function should return correct header when complete configuration 1`] = `"Connections, {nextUpdate} 45{units.seconds} @ 08:23:40"`;

exports[`renderHeader function should return correct header when incomplete configuration 1 1`] = `"Connections, {nextUpdate} 45{units.seconds}"`;

exports[`renderHeader function should return correct header when incomplete configuration 2 1`] = `"Connections @ 08:23:40"`;

exports[`renderHeader function should return simple string when silent configuration 1`] = `"Connections"`;

exports[`renderNoInfoVelib function should return correct HTML for table cell when no label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Stations {notYet}
   </td>
</tr>"
`;

exports[`renderNoInfoVelib function should return correct HTML for table row when label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Ulbach {notYet}
   </td>
</tr>"
`;

exports[`renderPublicTransport function should return correct HTML when no schedule 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         BUS,275
      </td>
      <td class=\\"align-left\\">
         {unavailable}
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         {unavailable}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when no schedule and no custom label for transilien 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         Becon Les Bruyeres
      </td>
      <td class=\\"align-left\\">
         {unavailable}
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         {unavailable}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         BUS,275
      </td>
      <td class=\\"align-left\\">
         La Défense
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         13:00
      </td>
</tr>
   <tr>
      <td class=\\"align-right bright\\"></td>
      <td class=\\"align-left\\">
         Place Charras
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         13:05
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and concatenate arrivals 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         BUS,275
      </td>
      <td class=\\"align-left\\">
         Place Charras
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         13:00
      </td>
</tr>
   <tr>
      <td class=\\"align-right bright\\"></td>
      <td class=\\"align-left\\">
         La Défense
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         13:15 / 13:30
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and convert to waiting time 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         BUS,275
      </td>
      <td class=\\"align-left\\">
         La Défense
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         15 {units.minutes}
      </td>
</tr>
   <tr>
      <td class=\\"align-right bright\\"></td>
      <td class=\\"align-left\\">
         Place Charras
      </td>
      <td class=\\"bright\\"></td>
      <td class=\\"bright\\">
         30 {units.minutes}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and mission code 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         BUS,275
      </td>
      <td class=\\"align-left\\">
         La Défense
      </td>
      <td class=\\"bright\\">
         POPU
      </td>
      <td class=\\"bright\\">
         13:00
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and status info 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         A
      </td>
      <td class=\\"align-left\\">
         La Défense
      </td>
      <td class=\\"bright\\">
         UAPY {status.delayed}
      </td>
      <td class=\\"bright\\">
         13:00
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedules and concatenate arrivals for transilien 1`] = `
"<table>
   <tr>
      <td class=\\"align-right bright\\">
         Becon
      </td>
      <td class=\\"align-left\\">
         SAINT-NOM LA BRETECHE FORET DE MARLY
      </td>
      <td class=\\"bright\\">
         SEBU
      </td>
      <td class=\\"bright\\">
         11:20 / 11:35 / 11:50
      </td>
</tr>
</table>"
`;

exports[`renderTraffic function should return correct HTML for table row 1`] = `
"<tr>
   <td class=\\"align-right bright\\">
      Ulbach Label
   </td>
   <td class=\\"align-left\\" colspan=\\"2\\">
      fluide
   </td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when history with trend 1`] = `"<tr></tr>"`;

exports[`renderVelib function should return correct HTML when history without trend 1`] = `
"<tr>
   <td class=\\"align-left\\">
      10
   </td>
   <td class=\\"bright\\">
      2 {velib.bikes} 8 {velib.spaces}
   </td>
   <td class=\\"align-right\\">
      Opera
   </td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when no history 1`] = `
"<tr>
   <td class=\\"bright\\">
      Opera Bis {notYet}
   </td>
</tr>"
`;

exports[`renderWrapper function should return correct HTML when loaded 1`] = `"<div class=\\"paristransport\\"></div>"`;

exports[`renderWrapper function should return correct HTML when not loaded 1`] = `
"<div class=\\"dimmed light small\\">
   {loading}
</div>"
`;
